src/objects/Match__c.object
<CustomObject>
    <fields>
        <fullName>Can_provide_laptop__c</fullName>
        <formula>Requirement__r.Laptop__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can provide laptop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Requirement__r.Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Requirement__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Requirement__r.Account__r.Primary_Contact__r.FirstName + &apos; &apos; + Requirement__r.Account__r.Primary_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Matches</relationshipLabel>
        <relationshipName>Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desired_Education_Level__c</fullName>
        <formula>TEXT(Requirement__r.Final_Education_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desired Education Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Level__c</fullName>
        <formula>TEXT( Requirement__r.Level_Required__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desired Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Sector_Type__c</fullName>
        <formula>TEXT(Requirement__r.Experience_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desired Sector Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Requirement__r.Account__r.Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Quality__c</fullName>
        <formula>IF(
  Score__c &gt; 75, 
  &quot;Very Good&quot;, 
  IF (Score__c &gt; 60,
    &quot;Good&quot;,
    IF (Score__c &gt; 50,
      &quot;Medium&quot;,
      &quot;Ignore&quot;
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <formula>Requirement__r.Account__r.Primary_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Requested_Qualifications__c</fullName>
        <formula>Requirement__r.Other_Qualifications__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Requested Qualifications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Requirement__r.Account__r.Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <formula>Requirement__r.Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <formula>CASE (Match_Quality__c,
 &quot;Very Good&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150Y000000cI92&quot;, &quot;Very Good&quot;),
 &quot;Good&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150Y000000cI97&quot;, &quot;Good&quot;),
 &quot;Medium&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150Y000000cI9C&quot;, &quot;Medium&quot;),
 IMAGE(&quot;/servlet/servlet.FileDownload?file=0150Y000000cI9H&quot;, &quot;Yellow&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Matches</relationshipLabel>
        <relationshipName>Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skype_Id__c</fullName>
        <formula>Requirement__r.Account__r.Primary_Contact__r.Skype_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skype Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viewed by Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed by Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed by Company</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>Requirement__r.Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <label>Match</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Match Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>